--- a/1_1.md
+++ b/1_1.md
@@ -1,1 +1,31 @@
-
+# Initialization
+### First of all you need to add using the namespace
+```c#
+using SimpleLogs4Net;
+//using this line you can initialize Logs
+```
+### First of all you need to 
+```c#
+new Log(AppDomain.CurrentDomain.BaseDirectory + "Logs\\");
+//using this line you can initialize Logs
+```
+### If you want to change the state of logs on the go 
+```c#
+Log.ChangeEnable(true);
+//True to Enable
+Log.ChangeEnable(false);
+//False to Enable
+```
+### You can add an event using Log.AddEvent
+```c#
+Log.AddEvent(new Event("text", Event.Type.Normal));
+```
+#### You can use Events in many diffrent ways
+```c#
+Log.AddEvent(new Event("text", Event.Type.Normal));
+Log.AddEvent(new Event("text", Event.Type.Error));
+Log.AddEvent(new Event("text", Event.Type.Warning));
+Log.AddEvent(new Event("text", Event.Type.Informtion));
+Log.AddEvent(new Event("text", Event.Type.Normal));
+Log.AddEvent(new Event("text", Event.Type.Critical_Error));
+```
