--- a/1_1.md
+++ b/1_1.md
@@ -16,6 +16,7 @@ Log.ChangeEnable(true);
 Log.ChangeEnable(false);
 //False to Enable
 ```
+# Usage
 ### You can add an event using Log.AddEvent
 ```c#
 Log.AddEvent(new Event("text", Event.Type.Normal));
@@ -28,4 +29,14 @@ Log.AddEvent(new Event("text", Event.Type.Warning));
 Log.AddEvent(new Event("text", Event.Type.Informtion));
 Log.AddEvent(new Event("text", Event.Type.Normal));
 Log.AddEvent(new Event("text", Event.Type.Critical_Error));
+//Sample Output 
+//[23.05.2022-14:47:44][INFO]Test
+//[23.05.2022-14:47:44][INFO]Test
+//[23.05.2022-14:47:44][ERROR]Test
+//[23.05.2022-14:47:44][WARNING]Test
+//[23.05.2022-14:47:44][INFO]Test
+```
+### SimpleLogs4Net include simple way to delete all log files
+```c#
+Log.ClearLogs();
 ```
