--- a/1_1.md
+++ b/1_1.md
@@ -30,11 +30,11 @@ Log.AddEvent(new Event("text", Event.Type.Informtion));
 Log.AddEvent(new Event("text", Event.Type.Normal));
 Log.AddEvent(new Event("text", Event.Type.Critical_Error));
 //Sample Output 
-//[23.05.2022-14:47:44][INFO]Test
-//[23.05.2022-14:47:44][INFO]Test
-//[23.05.2022-14:47:44][ERROR]Test
-//[23.05.2022-14:47:44][WARNING]Test
-//[23.05.2022-14:47:44][INFO]Test
+//[23.05.2022-14:47:44][INFO]text
+//[23.05.2022-14:47:44][INFO]text
+//[23.05.2022-14:47:44][ERROR]text
+//[23.05.2022-14:47:44][WARNING]text
+//[23.05.2022-14:47:44][INFO]text
 ```
 ### SimpleLogs4Net include simple way to delete all log files
 ```c#
