--- a/1.md
+++ b/1.md
@@ -1,1 +1,42 @@
-
+# Initialization
+### First of all you need to add using the namespace
+```c#
+using SimpleLogs4Net;
+//using this line you can initialize Logs
+```
+### First of all you need to 
+```c#
+new Log(AppDomain.CurrentDomain.BaseDirectory + "Logs\\");
+//using this line you can initialize Logs
+```
+### If you want to change the state of logs on the go 
+```c#
+Log.ChangeEnable(true);
+//True to Enable
+Log.ChangeEnable(false);
+//False to Enable
+```
+# Usage
+### You can add an event using Log.AddEvent
+```c#
+Log.AddEvent(new Event("text", Event.Type.Normal));
+```
+#### You can use Events in many diffrent ways
+```c#
+Log.AddEvent(new Event("text", Event.Type.Normal));
+Log.AddEvent(new Event("text", Event.Type.Error));
+Log.AddEvent(new Event("text", Event.Type.Warning));
+Log.AddEvent(new Event("text", Event.Type.Informtion));
+Log.AddEvent(new Event("text", Event.Type.Normal));
+Log.AddEvent(new Event("text", Event.Type.Critical_Error));
+//Sample Output 
+//[23.05.2022-14:47:44][INFO]text
+//[23.05.2022-14:47:44][INFO]text
+//[23.05.2022-14:47:44][ERROR]text
+//[23.05.2022-14:47:44][WARNING]text
+//[23.05.2022-14:47:44][INFO]text
+```
+### SimpleLogs4Net include simple way to delete all log files
+```c#
+Log.ClearLogs();
+```
