--- a/1_1.md
+++ b/1_1.md
@@ -40,3 +40,8 @@ Log.AddEvent(new Event("text", Event.Type.Critical_Error));
 ```c#
 Log.ClearLogs();
 ```
+# Changelog
+#### +Added Suport for multiline
+```c#
+Log.AddEvent(new Event(multilinestring, Event.Type.Normal))
+```
