--- a/1_2.md
+++ b/1_2.md
@@ -1,1 +1,63 @@
-
+# Initialization
+### First of all you need to add using the namespace
+```c#
+using SimpleLogs4Net;
+//using this line you can initialize Logs
+```
+### First of all you need to 
+```c#
+new Log(AppDomain.CurrentDomain.BaseDirectory + "Logs\\");
+//using this line you can initialize Logs
+```
+#### Initialization is now Simplified 
+```c#
+Log.Initialize(AppDomain.CurrentDomain.BaseDirectory + "Logs\\");
+//using this line you can initialize Logs
+```
+### If you want to change the state of logs on the go 
+```c#
+Log.ChangeEnable(true);
+//True to Enable
+Log.ChangeEnable(false);
+//False to Enable
+```
+# Usage
+### You can add an event using Log.AddEvent
+```c#
+Log.AddEvent(new Event("text", Event.Type.Normal));
+```
+#### Adding text to Logs is now simplified
+```c#
+Log.Write("text", Event.Type.Normal);
+Log.Write("text");
+//Log will be set to Default Type
+Log.ChangeDefaultType(Event.Type.Informtion);
+//Using /\ this line you can change default type
+```
+#### You can use Events in many diffrent ways
+```c#
+Log.AddEvent(new Event("text", Event.Type.Normal));
+Log.AddEvent(new Event("text", Event.Type.Error));
+Log.AddEvent(new Event("text", Event.Type.Warning));
+Log.AddEvent(new Event("text", Event.Type.Informtion));
+Log.AddEvent(new Event("text", Event.Type.Normal));
+Log.AddEvent(new Event("text", Event.Type.Critical_Error));
+//Sample Output 
+//[23.05.2022-14:47:44][INFO]text
+//[23.05.2022-14:47:44][INFO]text
+//[23.05.2022-14:47:44][ERROR]text
+//[23.05.2022-14:47:44][WARNING]text
+//[23.05.2022-14:47:44][INFO]text
+```
+### To make new log You Can Use NextLog
+```c#
+Log.NextLog();
+```
+### multiline
+```c#
+Log.AddEvent(new Event(multilinestring, Event.Type.Normal));
+```
+### SimpleLogs4Net include simple way to delete all log files
+```c#
+Log.ClearLogs();
+```
