--- a/1.md
+++ b/1.md
@@ -21,7 +21,7 @@ Log.ChangeEnable(false);
 ```c#
 Log.AddEvent(new Event("text", Event.Type.Normal));
 ```
-#### You can use Events in many diffrent ways
+#### You can use Events in many different ways
 ```c#
 Log.AddEvent(new Event("text", Event.Type.Normal));
 Log.AddEvent(new Event("text", Event.Type.Error));
