--- a/1_2.md
+++ b/1_2.md
@@ -34,7 +34,7 @@ Log.Write("text");
 Log.ChangeDefaultType(Event.Type.Informtion);
 //Using /\ this line you can change default type
 ```
-#### You can use Events in many diffrent ways
+#### You can use Events in many different ways
 ```c#
 Log.AddEvent(new Event("text", Event.Type.Normal));
 Log.AddEvent(new Event("text", Event.Type.Error));
