--- a/3_0.md
+++ b/3_0.md
@@ -57,3 +57,5 @@ Log.DebugMsg("info");
 Log.DebugMsg("ok", EType.Normal);
 // Debug messages are qued until the first log write or if is initialized will be written imietly 
 ```
+
+# If possible use latest version of 3.* versions as some older versions have really embarasing programmer errors
