--- a/3_0.md
+++ b/3_0.md
@@ -45,7 +45,7 @@ Log.NextLog();
 ### multiline output
 ```c#
 string[] multiline = ...;
-Log.AddEvent(multilinestring, EType.Normal));
+Log.AddEvent(new Event(multilinestring, EType.Normal));
 ```
 ### SimpleLogs4Net includes a simple way to delete all log files
 ```c#
@@ -57,5 +57,12 @@ Log.DebugMsg("info");
 Log.DebugMsg("ok", EType.Normal);
 // Debug messages are qued until the first log write or if is initialized will be written imietly 
 ```
-
+<div style="border-radius: 25px;
+  background: #e74c3c;
+  padding: 20px;
+  width: 200px;
+  height: 150px; ">
+<h1>Deprication</h1>
+Using the `Log.AddEvent` is goeing to be depricated in folowig section
+</div>
 # If possible use latest version of 3.* versions as some older versions have really embarasing programmer errors
