--- a/3_0.md
+++ b/3_0.md
@@ -57,12 +57,6 @@ Log.DebugMsg("info");
 Log.DebugMsg("ok", EType.Normal);
 // Debug messages are qued until the first log write or if is initialized will be written imietly 
 ```
-<div style="border-radius: 25px;
-  background: #e74c3c;
-  padding: 20px;
-  width: 200px;
-  height: 150px; ">
-<h1>Deprication</h1>
+# Deprication
 Using the `Log.AddEvent` is goeing to be depricated in folowig section
-</div>
-# If possible use latest version of 3.* versions as some older versions have really embarasing programmer errors
+If possible use latest version of 3.* versions as some older versions have really embarasing programmer errors
